tests/e2e/failing/receive/pattern-out-of-scope.unt
thread_def Main {
  receive {
    string x -> {}
    _ -> {
      print(x);
    }
  }
}